--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@headlessui/react": "^2.0.0",
+        "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
@@ -19,5 +19,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "apexcharts": "^4.4.0",
+        "react-apexcharts": "^1.7.0",
+        "react-datepicker": "^8.0.0"
     }
 }
