--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dependencies": {
         "apexcharts": "^4.4.0",
         "react-apexcharts": "^1.7.0",
-        "react-datepicker": "^8.0.0"
+        "react-datepicker": "^8.0.0",
+        "react-icons": "^5.5.0",
+        "sweetalert2": "^11.17.2"
     }
 }
