--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "apexcharts": "^4.4.0",
         "react-apexcharts": "^1.7.0",
         "react-datepicker": "^8.0.0",
