--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
+      - name: environment variables
+        run: cp .env.example .env
 
       - name: Generate Application Key
         run: php artisan key:generate
