--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,24 @@ jobs:
             display_errors = On
             error_reporting = E_ALL
 
+
+      - name: "nodejs"
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+
+      - name: "npm"
+        run: npm install
+
+      - name: "npm run build"
+        run: npm run build
+
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
       - name: environment variables
         run: cp .env.example .env
+
 
       - name: Generate Application Key
         run: php artisan key:generate
@@ -35,9 +49,18 @@ jobs:
       - name: Optimize Application
         run: php artisan optimize:clear
 
-      - name: Deploy to Hostinger
-        run: ${{ secrets.SSH_ACCESS }}
+      - name: FTP Deploy
+        uses: SamKirkland/FTP-Deploy-Action@4
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          local-dir: .
+          remote-dir: /public_html/fms
 
-      - name : Input Password for Hostinger
-        run: echo "${{ secrets.SSH_PASSWORD }}" | sshpass -p $SSH_PASSWORD ssh -o StrictHostKeyChecking=no -T user@hostinger.com
+
+
+
+
+
 
