--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,18 +50,18 @@ jobs:
         run: php artisan optimize:clear
 
       - name: Hostinger SSH Deployment
-        uses: easingthemes/ssh-deploy@main
+        uses: appleboy/ssh-action@master
         with:
-          SSH_PRIVATE_KEY: ${{ secrets.HOSTINGER_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.HOSTINGER_SSH_HOST }}
-          REMOTE_USER: ${{ secrets.HOSTINGER_SSH_USER }}
-          REMOTE_PORT: ${{ secrets.HOSTINGER_SSH_PORT }}
+          key: ${{ secrets.HOSTINGER_SSH_KEY }}
+          host: ${{ secrets.HOSTINGER_SSH_HOST }}
+          user: ${{ secrets.HOSTINGER_SSH_USER }}
+          port: ${{ secrets.HOSTINGER_SSH_PORT }}
 
 
-          SOURCE : "./"
-          TARGET: "/public_html/fms"
+          source : "./"
+          target: "/public_html/fms"
 
-          EXCLUDE: |
+          exclude: |
             /vendor
             /node_modules
             /storage
