--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,8 @@
-name : Deploy Laravel Project to Hostinger
+# .github/workflows/deploy.yml
 
-on :
+name: Deploy Laravel Project to Hostinger
+
+on:
   push:
     branches:
       - main
@@ -9,66 +11,38 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          extensions: mbstring, pdo_mysql, xml, curl, zip, bcmath
-          ini-values:
-            display_errors = On
-            error_reporting = E_ALL
-
-
-      - name: "nodejs"
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-
-      - name: "npm"
-        run: npm install
-
-      - name: "npm run build"
-        run: npm run build
-
-      - name: Install Dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
-      - name: environment variables
-        run: cp .env.example .env
-
-
-      - name: Generate Application Key
-        run: php artisan key:generate
-
-      - name: Migrate Database
-        run: php artisan migrate --force
-
-      - name: Optimize Application
-        run: php artisan optimize:clear
-
-      - name: Hostinger SSH Deployment
+      - name: Deploy to Hostinger
+        # Using the popular appleboy/ssh-action
         uses: appleboy/ssh-action@master
         with:
-          key: ${{ secrets.HOSTINGER_SSH_KEY }}
+          # SSH connection details from GitHub Secrets
           host: ${{ secrets.HOSTINGER_SSH_HOST }}
-          user: ${{ secrets.HOSTINGER_SSH_USER }}
+          username: ${{ secrets.HOSTINGER_SSH_USER }}
+          key: ${{ secrets.HOSTINGER_SSH_KEY }}
+          passphrase: ${{ secrets.HOSTINGER_SSH_PASSPHRASE }} # <-- Add this for your key
           port: ${{ secrets.HOSTINGER_SSH_PORT }}
 
+          # The script to execute on the remote server
+          script: |
+            # Navigate to your project directory on the server
+            cd /public_html/fms
 
-          source : "./"
-          target: "/public_html/fms"
+            # Pull the latest changes from the main branch
+            git pull origin main
 
-          exclude: |
-            /vendor
-            /node_modules
-            /storage
-            /bootstrap/cache
-            /public/storage
+            # Install Composer dependencies
+            composer install --no-interaction --prefer-dist --optimize-autoloader
 
+            # Install NPM dependencies and build assets for production
+            npm install
+            npm run build
 
+            # Run database migrations
+            # Your .env file should already be configured on the server
+            php artisan migrate --force
 
-
-
+            # Clear caches and optimize the application
+            php artisan optimize:clear
+            php artisan config:cache
+            php artisan route:cache
+            php artisan view:cache
