--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,10 +49,9 @@ jobs:
       - name: Optimize Application
         run: php artisan optimize:clear
 
-      - name: Hostinger SSH Deployment
+      - name: Hostinger SSH Deployment ${{ secrets.HOSTINGER_SSH_KEY }}
         uses: easingthemes/ssh-deploy@main
         with:
-          name: ${{secrets.HOSTINGER_SSH_KEY}}
           SSH_PRIVATE_KEY: ${{ secrets.HOSTINGER_SSH_KEY }}
           REMOTE_HOST: ${{ secrets.HOSTINGER_SSH_HOST }}
           REMOTE_USER: ${{ secrets.HOSTINGER_SSH_USER }}
