--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,12 +62,7 @@ jobs:
 
 
           TARGET: ${{ secrets.HOSTINGER_SSH_TARGET_PATH }}
-          EXCLUDE: |
-            /vendor
-            /node_modules
-            /storage
-            /bootstrap/cache
-            /public/storage
+          EXCLUDE: "/node_modules /storage /bootstrap/cache /public/storage"
 
 
 
