--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,9 @@ jobs:
       - name: environment variables
         run: cp .env.example .env
 
+      - name: Add SSO Client
+        run : echo "VITE_SSO_CLIENT_ID=${{ secrets.SSO_CLIENT_ID }} VITE_SSO_REDIRECT_URI=https://fms.iits.website/sso/callback" >> .env
+
 
       - name: Generate Application Key
         run: php artisan key:generate
