--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,12 +68,10 @@ jobs:
             ls -a
 
 
-          SCRIPT_AFTER: |
-            php artisan db:seed
 
 
           TARGET: ${{ secrets.HOSTINGER_SSH_TARGET_PATH }}
-          EXCLUDE: "/node_modules, /storage, /bootstrap/cache, /public/storage"
+          EXCLUDE: "/node_modules, /storage, /bootstrap/cache, /public/storage, .env"
 
 
 
