--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "dependencies": {
         "@heroicons/react": "^2.2.0",
         "apexcharts": "^4.5.0",
+        "lodash.debounce": "^4.0.8",
         "react-apexcharts": "^1.7.0",
         "react-datepicker": "^8.0.0",
         "react-icons": "^5.5.0",
-        "sweetalert2": "^11.17.2"
+        "sweetalert2": "^11.17.2",
+        "ziggy-js": "^2.5.3"
     }
 }
