--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,12 @@ jobs:
         run: |
           echo "VITE_SSO_CLIENT_ID=${{ secrets.SSO_CLIENT_ID }}" >> .env
           echo "VITE_SSO_REDIRECT_URI=https://fms.iits.website/sso/callback" >> .env
+          echo "PUSHER_APP_KEY=${{ secrets.PUSHER_APP_KEY }}" >> .env
+          echo "PUSHER_SECRET_KEY=${{ secrets.PUSHER_SECRET_KEY }}" >> .env
+          echo "PUSHER_APP_ID=${{ secrets.PUSHER_APP_ID }}" >> .env
+          echo "PUSHER_APP_CLUSTER=${{ secrets.PUSHER_APP_CLUSTER }}" >> .env
+          echo "VITE_PUSHER_APP_KEY=${{ secrets.PUSHER_APP_KEY }}" >> .env
+          echo "VITE_PUSHER_APP_CLUSTER=${{ secrets.PUSHER_APP_CLUSTER }}" >> .env
 
       - name: "npm run build"
         run: npm run build
